Happy new year
Rewrote most files and added models file for data base interaction
