# config.py
@@ -1,18 +1,24 @@
-import os
+import pathlib
+import connexion
+from flask_sqlalchemy import SQLAlchemy
+from flask_marshmallow import Marshmallow
 
-class Config:
-    SERVER = os.getenv('DB_SERVER', 'dist-6-505.uopnet.plymouth.ac.uk')
-    DATABASE = os.getenv('DB_DATABASE', 'COMP2001_ZVenus')
-    USERNAME = os.getenv('DB_USERNAME', 'ZVenus')
-    PASSWORD = os.getenv('DB_PASSWORD', 'WefN343*')
+basedir = pathlib.Path(__file__).parent.resolve()
+connex_app = connexion.App(__name__, specification_dir=basedir)
 
-    connectionString = (
-    f"DRIVER={{ODBC Driver 18 for SQL Server}};"
-    f"SERVER={SERVER};"
-    f"DATABASE={DATABASE};"
-    f"UID={USERNAME};"
-    f"PWD={PASSWORD};"
+app = connex_app.app
+app.config["SQLALCHEMY_DATABASE_URI"] = (
+    "mssql+pyodbc:///?odbc_connect="
+    "DRIVER={ODBC Driver 18 for SQL Server};"
+    "SERVER=dist-6-505.uopnet.plymouth.ac.uk;"
+    "DATABASE=COMP2001_ZVenus;"
+    "UID=ZVenus;"
+    "PWD=WefN343*;"
     "TrustServerCertificate=yes;"
-    "Encrypt"
-    "Trusted_Connection=No"
+    "Encrypt=yes;"
 )
+
+app.config["SQLALCHEMY_TRACK_MODIFICATIONS"] = False
+
+db = SQLAlchemy(app)
+ma = Marshmallow(app)
